<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="fill_parent">

	<!-- title -->
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:padding="10dp" android:background="@drawable/cm_gradient_light_gray">

		<include layout="@layout/battery_appearance" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_weight="1" android:orientation="vertical"
			android:paddingLeft="10dp" android:layout_height="wrap_content"
			android:layout_gravity="center_vertical">

			<TextView android:text="@string/txt_quick_battery"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textAppearance="@style/ContactText" android:shadowDx="0"
				android:shadowDy="0" android:shadowColor="#333333"
				android:shadowRadius="4" />

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textAppearance="@style/ContactData"
				android:text="@string/txt_configuration" />

		</LinearLayout>
	</LinearLayout>

	<!-- actions  -->

	<LinearLayout android:id="@+id/link0"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingBottom="8dp"
		android:paddingTop="10dp" android:paddingLeft="10dp"
		android:focusable="true" android:clickable="true"
		android:background="@android:drawable/list_selector_background"
		android:minHeight="65dp">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_weight="1" android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_gravity="center_vertical">

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textAppearance="@style/ContactActionText"
				android:layout_gravity="center_vertical" android:text="@string/txt_select_widget_design" />

			<TextView android:layout_width="wrap_content" android:id="@+id/design_descr"
				android:layout_height="wrap_content" android:textAppearance="@style/ContactActionData"
				android:layout_gravity="center_vertical" />

		</LinearLayout>

	</LinearLayout>

	<View android:layout_width="fill_parent"
		android:background="@*android:drawable/divider_horizontal_dark"
		android:layout_height="1px" />

	<LinearLayout android:id="@+id/link1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingBottom="8dp"
		android:paddingTop="8dp" android:paddingLeft="10dp" android:focusable="true"
		android:clickable="true" android:background="@android:drawable/list_selector_background"
		android:minHeight="65dp">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_weight="1" android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_gravity="center_vertical">

			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textAppearance="@style/ContactActionText"
				android:layout_gravity="center_vertical" android:text="@string/txt_assigned_activity" />

			<TextView android:layout_width="wrap_content"
				android:id="@+id/assigned_activity_descr" android:layout_height="wrap_content"
				android:textAppearance="@style/ContactActionData"
				android:layout_gravity="center_vertical" android:text="@string/txt_assigned_activity_descr" />

		</LinearLayout>

	</LinearLayout>

	<View android:layout_width="fill_parent"
		android:background="@*android:drawable/divider_horizontal_dark"
		android:layout_height="1px" />

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="horizontal" android:layout_marginBottom="7dp">

		<Button android:layout_height="wrap_content"
			android:layout_width="120dp" android:layout_marginRight="5dp"
			android:text="@string/btn_done" style="@style/bottomBarButton"
			android:id="@+id/button1" android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"/>

	</RelativeLayout>

</LinearLayout>